<resources>
    <string name="app_name">Tip_Calculator</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="total_bill">Total Bill:</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="tip">Tip%:</string>
    <string name="back">Back</string>
    <string name="zero_dollars">$0.0</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="select">Select</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="not_assigned">N/A</string>
    <string name="selected_tip">Selected Tip</string>
    <string name="custom_percentage">Custom %:</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="custom">Custom</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>